<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackgroudColor"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:fontFamily="@font/roboto"
        android:padding="16dp"
        android:text="@string/app_name"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appHeading">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardDeviceRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/secondaryBackgroundColor"
                app:cardCornerRadius="4dp"
                app:contentPadding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appHeading">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayoutDeviceRole"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/question1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:padding="8dp"
                        android:text="@string/question_1"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/question1">

                        <RadioButton
                            android:id="@+id/radioOption1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/primaryDarkColor"
                            android:checked="true"
                            android:fontFamily="@font/roboto"
                            android:text="@string/option_1"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/radioOption2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/primaryDarkColor"
                            android:checked="false"
                            android:fontFamily="@font/roboto"
                            android:text="@string/option_2"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="16sp" />
                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardHostIpAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/secondaryBackgroundColor"
                app:cardCornerRadius="4dp"
                app:contentPadding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appHeading">

                <LinearLayout
                    android:id="@+id/constraintLayoutHostIpAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/question2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:padding="8dp"
                        android:text="@string/question_2"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/ipAddressNumber1"
                            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/rounded_edittext"
                            android:ems="3"
                            android:hint="@string/hint"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:minHeight="48dp"
                            android:padding="4dp"
                            android:textAlignment="center"
                            android:textColor="@color/primaryTextColor"
                            android:textColorHighlight="@color/primaryLightColor"
                            android:textColorHint="@color/secondaryTextColor"
                            android:textColorLink="@color/primaryDarkColor" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:minWidth="12dp"
                            android:minHeight="48dp"
                            android:text="@string/dot"
                            android:textAlignment="center"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="24sp" />

                        <EditText
                            android:id="@+id/ipAddressNumber2"
                            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/rounded_edittext"
                            android:ems="3"
                            android:hint="@string/hint"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:minHeight="48dp"
                            android:padding="4dp"
                            android:textAlignment="center"
                            android:textColor="@color/primaryTextColor"
                            android:textColorHighlight="@color/primaryLightColor"
                            android:textColorHint="@color/secondaryTextColor"
                            android:textColorLink="@color/primaryDarkColor" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:minWidth="12dp"
                            android:minHeight="48dp"
                            android:text="@string/dot"
                            android:textAlignment="center"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="24sp" />

                        <EditText
                            android:id="@+id/ipAddressNumber3"
                            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/rounded_edittext"
                            android:ems="3"
                            android:hint="@string/hint"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:minHeight="48dp"
                            android:padding="4dp"
                            android:textAlignment="center"
                            android:textColor="@color/primaryTextColor"
                            android:textColorHighlight="@color/primaryLightColor"
                            android:textColorHint="@color/secondaryTextColor"
                            android:textColorLink="@color/primaryDarkColor" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:minWidth="12dp"
                            android:minHeight="48dp"
                            android:text="@string/dot"
                            android:textAlignment="center"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="24sp" />

                        <EditText
                            android:id="@+id/ipAddressNumber4"
                            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:background="@drawable/rounded_edittext"
                            android:ems="3"
                            android:hint="@string/hint"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:minHeight="48dp"
                            android:padding="4dp"
                            android:textAlignment="center"
                            android:textColor="@color/primaryTextColor"
                            android:textColorHighlight="@color/primaryLightColor"
                            android:textColorHint="@color/secondaryTextColor"
                            android:textColorLink="@color/primaryDarkColor" />
                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardHostPortNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                app:cardBackgroundColor="@color/secondaryBackgroundColor"
                app:cardCornerRadius="4dp"
                app:contentPadding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appHeading">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayoutHostPortNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/question3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:padding="8dp"
                        android:text="@string/question_3"
                        android:textColor="@color/primaryTextColor"

                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/portNumber"
                        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:autofillHints="5000"
                        android:background="@drawable/rounded_edittext"
                        android:ems="4"
                        android:hint="@string/hintPort"
                        android:inputType="number"
                        android:minHeight="48dp"
                        android:padding="4dp"
                        android:textAlignment="center"
                        android:textColor="@color/primaryTextColor"
                        android:textColorHighlight="@color/primaryLightColor"
                        android:textColorHint="@color/secondaryTextColor"
                        android:textColorLink="@color/primaryDarkColor"
                        app:layout_constraintEnd_toEndOf="@+id/question3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/question3" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="128dp"
                android:text="@string/next" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
